# alpaca-mcp-server

./: .env.example  Dockerfile  INSTALLATION.md  PUBLISHING_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  README.md  REGISTRY_INFO.md  UPGRADE_LOG.md  UPGRADE_SUMMARY.md  alpaca_mcp_server.py  mcp_architecture_diagram.md  pyproject.toml  tmp.py
.cursor/rules/: algotrading.mdc  avoid_hallucinations.mdc
.github/: __init__.py
_doc/: 2025-06-26_option-order-refactoring.md  2025-06-27_stock-snapshot-implementation.md  2025-07-16_watchlist-fix.md  2025-09-20-uvx_rebuild.md
alpaca_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alpaca_mcp_server_github/core/: __init__.py
src/alpaca_mcp_server/: cli.py  config.py  server.py
